styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
    color: #333;
    background-color: #f4f4f9;
}

header {
    background-color: #333;
    color: #fff;
    padding: 1rem;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

header img {
    margin-right: .5rem;
}

header h1 {
    margin: 0;
}

nav {
    background-color:rgb(54, 118, 97);
    width: 100%;
    margin: 0 auto;
}

nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    text-align: center;
    display: flex;
    flex-direction: column;
}

nav ul li {
    margin: 0.5rem;
}

nav ul li a {
    display: block;
    color: #fff;
    text-align: center;
    padding: 1rem;
    text-decoration: none;
}

.active a {
    background-color: rgb(68, 147, 121);
}

main {
    max-width: 1000px;
    margin: 0 auto;
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
}

.card {
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    padding: 1rem;
    margin-top: 1rem;
}

h1{
    padding: 1rem;
    color: #fff;
    background-color: #333;
    text-align: center;
}

h2 {
    font-weight: 700;
    padding: 1rem;
    color: #fff;
    background-color: rgb(54, 118, 97);
}

h3 {
    padding: .5rem;
    margin-top: 1rem;
}

section ul {
    list-style-type: none;
    padding: .5rem;
    margin-top: 1rem;
}

section ul li {
    padding: .25rem;
}

footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 1rem;
}

